monitoring/prometheus/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.mgmt.sholdee.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-k8s 
              port:
                number: 9090
  tls:
  - hosts:
    - prometheus.mgmt.sholdee.net
    secretName: prometheus-tls-secret
